...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"/>
            </FrameLayout>
            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold"/>
...
