<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.MainActivity">
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerCategories"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    <include layout="@layout/loader_layout" />
</FrameLayout>